[package]
name = "mc-extractor"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A way to get back the original files from the assets/ folder on Minecraft"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
