[package]
name = "mc-extractor"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A way to get back the original files from the assets/ folder on Minecraft"
authors = ["AlbertLarsan68"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = { version = "0.16.2", features = ["improved_unicode"] }
lazy_static = "1.4.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"

[features]
